# neuralink-challenge-submission

./: .gitignore  CMakeLists.txt  Makefile  README.md  decode  decode.cpp  encode  encode.cpp
include/: autoencoder.h  serialize.h
models/: decoder.onnx  encoder.onnx
